syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.kaizensundays.eta.grpc";
option java_outer_classname = "EtaProto";
option objc_class_prefix = "HLW";

package eta;

message Ping {
  string message = 1;
}

message Pong {
  string message = 1;
}

service Greeter {
  rpc ping (Ping) returns (Pong) {}
}

message Msg {
  string type = 1;
  int32 seqNum = 2;
}

message Response {
  Msg msg = 1;
  int32 code = 2;
  string text = 3;
}

message CacheValue {
  Response response = 1;
  bytes value = 2;
}

message GetRequest {
}

service Endpoint {
  rpc GetStream(GetRequest) returns (stream CacheValue) {}
}